--- a/.github/workflows/translate.yaml
+++ b/.github/workflows/translate.yaml
@@ -26,7 +26,7 @@ jobs:
       image: ghcr.io/noaa-gfdl/miniforge:mpich
     steps:
 
-      - name: Checkout PyFV3 for externally triggered
+      - name: Checkout pyFV3 for externally triggered
         if: ${{inputs.component_trigger}}
         uses: actions/checkout@v4
         with:
@@ -41,7 +41,7 @@ jobs:
           submodules: 'recursive'
           path: pyFV3/${{inputs.component_name}}
 
-      - name: Checkout pyFV3 for interally triggered
+      - name: Checkout pyFV3 for internally triggered
         if: ${{!inputs.component_trigger}}
         uses: action/checkout@v4
         with:
