--- a/.github/workflows/translate.yaml
+++ b/.github/workflows/translate.yaml
@@ -1,14 +1,15 @@
 name: "Translate pyFV3 test (subset)"
 on:
-  inputs:
-    component_trigger:
-      type:  boolean
-      default: false
-      required: false
-    component_name:
-      type: string
-      default: 'None'
-      required: false
+  workflow_call:
+    inputs:
+      component_trigger:
+        type:  boolean
+        default: false
+        required: false
+      component_name:
+        type: string
+        default: 'None'
+        required: false
   push:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
