--- a/.github/workflows/translate.yaml
+++ b/.github/workflows/translate.yaml
@@ -33,3 +33,10 @@ jobs:
           submodules: 'recursive'
           repository:  noaa-gfdl/pyFV3
           path: pyFV3
+
+      - name: Checkout NDSL for externally triggered
+        if: ${{inputs.component_trigger}}
+        uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+          path: pyFV3/${{inputs.component_name}}
