--- a/.github/workflows/translate.yaml
+++ b/.github/workflows/translate.yaml
@@ -47,3 +47,71 @@ jobs:
         with:
           submodules: 'recursive'
           path: pyFV3
+
+      - name: install packages to test NDSL in pyFV3
+        if: ${{inputs.component_trigger}}
+        run:  |
+          cd ${GITHUB_WORKSPACE}/pyFV3
+          cd NDSL && pip3 install .[test]
+          cd .. pip3 install .[test]
+
+      - name: Install packages to test only pyFV3
+        if: ${{ ! inputs.component_trigger }}
+        run : |
+          cd ${GITHUB_WORKSPACE}/pyFV3
+          pip install .[ndsl,test]
+
+      - name: Prepare test_data
+        run: |
+          cd ${GITHUB_WORKSPACE}/pyFV3
+          mkdir -p test_data  && cd test_data
+          wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.tar.gz
+          tar -xzvf  8.1.3_c12_6ranks_standard.tar.gz --no-same-owner
+          cd ..
+
+      - name: Numpy FvTp2d
+        run: |
+          cd ${GITHUB_WORKSPACE}/pyFV3
+          pytest \
+            -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
+            --backend=numpy \
+            --which_modules=FvTp2d \
+            --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
+            ./tests/savepoint
+
+      - name: Numpy D_SW
+        run: |
+         cd ${GITHUB_WORKSPACE}/pyFV3
+         pytest \
+            -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
+            --backend=numpy \
+            --which_modules=D_SW \
+            --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
+            ./tests/savepoint
+
+      - name: Numpy Remapping
+        run: |
+          cd ${GITHUB_WORKSPACE}/pyFV3
+          pytest \
+            -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
+            --backend=numpy \
+            --which_modules=Remapping \
+            --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
+            ./tests/savepoint
+
+      - name: Orchestrated dace-cpu Acoustics
+        run: |
+          cd ${GITHUB_WORKSPACE}/pyFV3
+          export FV3_DACEMODE=BuildAndRun
+          export PACE_FLOAT_PRECISION=64
+          export PACE_TEST_N_THRESHOLD_SAMPLES=0
+          export OMP_NUM_THREADS=1
+          export PACE_LOGLEVEL=Debug
+          mpiexec -mca orte_abort_on_non_zero_status 1 -np 6 --oversubscribe pytest \
+            -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
+            --backend=dace:cpu \
+            -m parallel \
+            --which_rank=0 \
+            --which_modules=DynCore \
+            --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
+            ./tests/savepoint
